Dark mode attempt fix 2

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #1C1C1C;
+  --foreground: #ededed;
 }
 
 body {
